# nano-revival

./: README.md
.github/workflows/: lint.yml
firmware/: CMakeLists.txt  Makefile  flash_prog_cfg.ini  proj.conf
firmware/include/audio/: audio.h
firmware/include/shell/: shell.h
firmware/include/usb/: usb_cdc_acm_interface.h  usb_config.h
firmware/include/utils/: trig.h
firmware/scripts/: lint.sh
firmware/src/: main.c
firmware/src/audio/: audio.c
firmware/src/shell/: shell.c
firmware/src/usb/: usb_cdc_acm_interface.c
src/mini-shell/: CMakeLists.txt  LICENSE  README.md  cdc_acm_usb_interface.c  main.c
tracking/: start.md
